; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_neg_32_d.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_neg_32_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_neg_32_d() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  store i32* @DY, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = load i32, i32* %3, align 4
  %5 = sub nsw i32 0, %4
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @NFLAG_32(i32 %6)
  store i32 %7, i32* @FLAG_N, align 4
  %8 = load i32*, i32** %1, align 8
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @CFLAG_SUB_32(i32 %9, i32 0, i32 %10)
  store i32 %11, i32* @FLAG_X, align 4
  store i32 %11, i32* @FLAG_C, align 4
  %12 = load i32*, i32** %1, align 8
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %2, align 4
  %15 = and i32 %13, %14
  %16 = ashr i32 %15, 24
  store i32 %16, i32* @FLAG_V, align 4
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @MASK_OUT_ABOVE_32(i32 %17)
  store i32 %18, i32* @FLAG_Z, align 4
  %19 = load i32, i32* @FLAG_Z, align 4
  %20 = load i32*, i32** %1, align 8
  store i32 %19, i32* %20, align 4
  ret void
}

declare dso_local i32 @NFLAG_32(i32) #1

declare dso_local i32 @CFLAG_SUB_32(i32, i32, i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
